# PolarCodes

./: .gitignore  CMakeLists.txt  GaSeq.dump  Notes.txt  PolarSimulate.sln  PolarSimulate.vcxproj  README.md  backup  fullTree.debug  leader.dump  leader1024back.dump  test.results
BuildSequence/: BuildSequence.vcxproj  BuildSequence.vcxproj.filters  StatisticalSequence.cpp  StatisticalSequence.h  main.cpp
configs/: test_config.xml
include/: BaseChannel.h  BaseDecoder.h  BpskAwgnChannel.h  BpskBscChannel.h  CRC.h  CommonTransformations.h  DecoderType.h  Exceptions.h  FlipStatistic.h  FlipStatisticNew256_128.h  GaussianApproximation.h  IvanDecoder.h  OperationsCount.h  PolarCode.h  ScCrcAidedDecoder.h  ScCreeperDecoder.h  ScDecoder.h  ScDecoderTreeMaker.h  ScFanoDecoder.h  ScFlipDecoder.h  ScFlipFanoDecoder.h  ScFlipProgDecoder.h  ScFlipStatDecoder.h  ScListDecoder.h  ScListFanoDecoder.h  ScListFlipOracleStatDecoder.h  ScListFlipStatDecoder.h  ScOptimized.h  ScRecursiveDecoder.h  ScStackDecoder.h  ScStackOperationCounter.h  ScStackOptimizedDecoder.h  SimulationParameters.h  SimulationType.h  StatisticalSequence.h
polar_sequences/: 1024_268.txt  1024_289.txt  1024_512.txt  LeaderToSequence.ipynb  Untitled.ipynb  backup  leader.dump
polar_sequences/.ipynb_checkpoints/: LeaderToSequence-checkpoint.ipynb
polar_sequences/Stat/: 1024  128_64  256  256_128  32  512  64
result/: scivan.results  scivan2.results  scivan_-2_1.results  scl.results  scl2.results  test.results
results/: SC.results  SC12.results  SC123.results  SCFano_clean.results  SC_clean.results
results_plotting/: PlotFerCurve.ipynb  Statistic.ipynb  Untitled.ipynb
src/: BaseChannel.cpp  BaseDecoder.cpp  BaseSimulator.cpp  BpskAwgnChannel.cpp  BpskBscChannel.cpp  CRC.cpp  CommonTransformations.cpp  ConfigReading.cpp  DecoderType.cpp  Encoder.cpp  IvanDecoder.cpp  MonteCarloSimulator.cpp  PolarCode.cpp  ScCrcAidedDecoder.cpp  ScCreeperDecoder.cpp  ScDecoder.cpp  ScDecoderTreeMaker.cpp  ScFanoDecoder.cpp  ScFlipDecoder.cpp  ScFlipProgDecoder.cpp  ScFlipStatDecoder.cpp  ScListDecoder.cpp  ScListFanoDecoder.cpp  ScListFlipOracleStatDecoder.cpp  ScListFlipStatDecoder.cpp  ScOptimized.cpp  ScRecursiveDecoder.cpp  ScStackDecoder.cpp  ScStackOperationCounter.cpp  ScStackOptimizedDecoder.cpp  Simulate.cpp  StatisticalSequence.cpp  Test_AwgnBer.cpp  Test_GA.cpp  Test_ScTreeMaker.cpp  crcTest.cpp  gaTe.cpp  main.cpp  source.cpp
